# BeeBee

./: CMakeLists.txt  README.md  resources.qrc
include/: AudioEngine.h  DrumClient.h  DrumGrid.h  DrumServer.h  MainWindow.h  NetworkManager.h  Protocol.h  Room.h  RoomListWidget.h  RoomManager.h  UserListWidget.h  gridstate.h
resources/: resources.qrc
src/: AudioEngine.cpp  DrumClient.cpp  DrumGrid.cpp  DrumServer.cpp  GridState.cpp  MainWindow.cpp  NetworkManager.cpp  Protocol.cpp  Room.cpp  RoomListWidget.cpp  RoomManager.cpp  UserListWidget.cpp  main.cpp
